css/main.css
body {
  font-size: 24px;
  font-family: 'Segoe UI';
  color: white;
  background-color: var(--main-background-color);
  margin: 0;
  margin-top: 110px;
}

.navbar {
  font-size: 22px;
  position: fixed;
  top: 0;
  height: 75px;
  width: 100%;
  background-color: var(--main-background-color);
  box-shadow: 5px 5px 25px 0 rgba(7, 7, 7, 0.33);
  display: flex;
  align-items: center;
  z-index: 2;
  padding-left: 20px;
}

.navbarItem {
  margin: 10px;
  text-align: center;
  font-weight: 600;
  cursor: pointer;
}

.navbarItem::after {
  height: 4px;
  content: '';
  position: fixed;
  background-color: white;
  border-radius: 90px;
  opacity: 0;
  transition: opacity 150ms ease-in-out;
}

.navbarItem.selected {
  padding-bottom: 10px;
}

.navbarItem.selected::after {
  opacity: 0.7;
}

.navbarItems {
  display: flex;
  flex-direction: row;
  padding-top: 10px;
}

.navbarItem:hover::after {
  opacity: 1;
}

.navbarItemBack {
  margin: 20px 20px 20px 0;
  text-align: center;
  font-size: 22px;
  font-weight: 600;
  cursor: pointer;
  transition: transform 200ms ease-in-out;
}

.navbarItemBack:hover {
  transform: scale(140%);
}

.navbar.mobile .navbarItemBack {
  display: none;
}

.navbarItemMenuLeft {
  margin: auto;
  text-align: center;
  font-size: 22px;
  font-weight: 600;
  cursor: pointer;
  transition: 200ms ease-in-out;
}

.navbar .navbarItemMenuLeft {
  display: none;
}

.navbar.mobile .navbarItemMenuLeft {
  display: block;
  align-self: flex-start;
}

.navbar.mobile .navbarItem {
  margin-top: 0;
  margin-bottom: 0;
}

.navbar.mobile {
  font-size: 26px;
  width: 75px;
}

.navbar.mobile .navbarItems {
  display: none;
  margin-top: 10px;
  margin-bottom: 10px;
  padding-top: 0;
  flex-direction: column;
  align-items: flex-start;
  border-left: 1px solid white;
  gap: 10px;
}

[data-id='logoutBtn'],
[data-id='logoutAllBtn'] {
  color: red;
}

[data-id='logoutBtn']::after,
[data-id='logoutAllBtn']::after {
  background-color: red;
}
/* ! navbar end */

div.header {
  font-size: 32px;
  font-weight: 700;
}

div.header-small {
  font-size: 24px;
  font-weight: 600;
}

div.center {
  text-align: center;
}

.inpContainer.center {
  text-align: center;
}

div.spacer {
  width: 100%;
  height: 20px;
}
div.spacer-large {
  width: 100%;
  height: 40px;
}
div.spacer-small {
  width: 100%;
  height: 10px;
}
div.spacer-verySmall {
  width: 100%;
  height: 5px;
}

.itemContainer {
  color: var(--secondary-color-dark);
  background-color: rgba(255, 255, 255, 0.95);
  width: fit-content;
  min-width: fit-content;
  border-radius: var(--border-radius-large);
  padding: 10px;
  box-shadow: var(--box-shadow);
}

.itemContainer.setWidth {
  width: calc(100% - 50px);
  max-width: 600px;
}

.itemContainer.center {
  margin: 0 auto;
}

.hidden {
  display: none;
}

.btn {
  font-size: 20px;
  font-weight: 600;
  color: white;
  background-color: var(--main-color);
  border: 1px solid var(--main-color-dark);
  padding: 10px;
  border-radius: var(--border-radius-small);
  min-width: fit-content;
  transition: 150ms ease-in-out;
  cursor: pointer;
}

.btn:hover {
  background-color: var(--main-color-dark);
}

.btn:disabled {
  background-color: var(--secondary-color);
  border-color: var(--secondary-color-dark);
  cursor: not-allowed;
}

.inpContainer.center.setWidth .btn {
  width: calc(100% - 48px);
  max-width: 502px;
  min-width: 200px;
}

.inp {
  font-size: 20px;
  font-weight: 600;
  min-width: calc(200px - 20px);
  padding: 10px;
  border: 1px solid var(--secondary-color-dark);
  color: var(--secondary-color-dark);
  border-radius: var(--border-radius-small);
  transition: 150ms ease-in-out;
  outline: none;
  background-color: inherit;
}

.inp:focus {
  box-shadow: 0 0px 2px 2px rgba(7, 7, 7, 0.33);
}

.inp.error {
  border-color: red;
  outline-color: red;
}

.inp::placeholder {
  color: var(--secondary-color-light);
}

div.inpContainer.center.setWidth .inp {
  width: calc(100% - 50px - 20px);
  max-width: calc(500px - 20px);
}

.inpErrorInfo-wrapper {
  margin: 0 auto;
  width: calc(100% - 50px);
  max-width: 500px;
  min-width: fit-content;
}

.inpErrorInfo {
  text-align: left;
  color: red;
  font-size: 14px;
  font-weight: 600;
}

#mainContainer {
  margin: 20px;
}

.planContainerWrapper {
  display: flex;
  gap: 20px;
  flex-wrap: wrap;
}

.itemContainer.planContainer {
  padding-top: 5px;
  min-width: 200px;
  aspect-ratio: 1 / 1;
  overflow: hidden;
  transition: 200ms ease-in-out;
  border: 2px solid transparent;
}

.itemContainer.planContainer.mobile {
  min-width: 125px;
  padding: 5px;
}

.itemContainer.planContainer.fullScreen {
  position: fixed;
  padding: 10px;
  top: 25px;
  left: 25px;
  width: calc(100% - 74px);
  height: calc(100% - 69px);
  border-color: var(--main-color);
  transform: scale(100%);
  z-index: 4;
}

.itemContainer.planContainer:not(.fullScreen):hover {
  border-color: var(--main-color);
  transform: scale(103%);
}

.itemContainer.planContainer * {
  max-width: 200px;
}

.itemContainer.planContainer.mobile * {
  max-width: 125px;
}

.itemContainer.planContainer.fullScreen * {
  max-width: 200px;
}

.itemContainer.planContainer .open {
  width: 200px;
  aspect-ratio: 1 / 1;
  position: absolute;
  padding: 7px 12px 12px 12px;
  transform: translate(-12px, -7px);
  z-index: 3;
  cursor: pointer;
}

.itemContainer.planContainer.mobile .open {
  width: 125px;
  padding: 7px;
  transform: translate(-7px, -7px);
}

.itemContainer.planContainer .close {
  position: absolute;
  top: 10px;
  right: 10px;
  height: 41px;
  display: none;
}

.itemContainer.planContainer .closeSVG {
  background-color: var(--main-color);
  border: 1px solid var(--main-color-dark);
  border-radius: var(--border-radius-small);
  stroke: white;
  stroke-width: 2.5;
  stroke-linecap: round;
  padding: 7px;
  transition: 150ms ease-in-out;
  cursor: pointer;
}

.itemContainer.planContainer.fullScreen .close {
  display: inherit;
}

.itemContainer.planContainer.fullScreen .closeSVG:hover {
  background-color: var(--main-color-dark);
}

.itemContainer.planContainer .remove {
  position: absolute;
  top: 61px;
  right: 10px;
  height: 41px;
  display: none;
}

.itemContainer.planContainer .removeSVG {
  background-color: red;
  border: 1px solid var(--red-dark);
  border-radius: var(--border-radius-small);
  fill: white;
  stroke-linecap: round;
  padding: 7px;
  transition: 150ms ease-in-out;
  cursor: pointer;
}

.itemContainer.planContainer.fullScreen .remove {
  display: inherit;
}

.itemContainer.planContainer.fullScreen .removeSVG:hover {
  background-color: var(--red-dark);
}

.itemContainer.planContainer .title {
  font-size: 24px;
  font-weight: 700;
  color: var(--secondary-color-dark);
  overflow: hidden;
}

.itemContainer.planContainer.mobile .title {
  font-size: 20px;
}

.itemContainer.planContainer.fullScreen .title {
  font-size: 28px;
  font-weight: 700;
}

.itemContainer.planContainer .date {
  position: absolute;
  width: 100%;
  text-align: right;
  font-size: 14px;
  font-weight: 600;
  color: var(--secondary-color);
}

.itemContainer.planContainer .time {
  font-size: 14px;
  font-weight: 600;
  color: var(--secondary-color);
}

.itemContainer.planContainer.mobile .date,
.itemContainer.planContainer.mobile .time {
  font-size: 12px;
}

.itemContainer.planContainer.fullScreen .date,
.itemContainer.planContainer.fullScreen .time {
  font-size: 14px;
}

.itemContainer.planContainer .line {
  background-color: var(--main-color);
  width: 100%;
  height: 2px;
}

.itemContainer.planContainer .content {
  font-size: 14px;
  font-weight: 600;
}

.itemContainer.planContainer.fullScreen .content {
  font-size: 18px;
  font-weight: 600;
  width: calc(100vw - 80px);
  min-width: calc(100vw - 80px);
  max-width: calc(100vw - 80px);
  height: 100vh;
  max-height: 100vh;
}

.backgroundBlock {
  position: fixed;
  width: 100vw;
  height: 100vh;
  top: 0;
  background-color: var(--main-background-color);
  z-index: 3;
  cursor: pointer;
}

.noPlans {
  font-size: 16px;
  font-weight: 600;
  color: var(--secondary-color-light);
  margin-left: 10px;
}

#createPlanBtn {
  position: fixed;
  right: 20px;
  z-index: 1;
  min-width: 207px;
  transform: translateY(10px);
}

#createPlanContainer .inp {
  width: 180px;
  min-width: 180px;
  padding: 5px;
}

#createPlanContainer .titleInp {
  font-size: 24px;
  font-weight: 700;
}

#createPlanContainer .dateInp,
#createPlanContainer .timeInp {
  display: inline-block;
  font-size: 14px;
  font-weight: 600;
  color: var(--secondary-color);
  background-color: white; /* for mobile */
}

#createPlanContainer .contentInp {
  width: calc(100vw - 90px);
  min-width: calc(100vw - 90px);
  max-width: calc(100vw - 90px);
  height: 300px;
  font-size: 18px;
  font-family: inherit;
  resize: vertical;
  outline: none;
  padding: 5px;
  transition: 150ms ease-in-out;
  border-radius: var(--border-radius-small);
}

#createPlanContainer .contentInp:focus {
  box-shadow: 0 0px 2px 2px rgba(7, 7, 7, 0.33);
}

#createPlanContainer .info {
  font-size: 14px;
  font-weight: 600;
  color: var(--secondary-color);
  width: fit-content;
  margin: 0;
}

#createPlanContainer .submit {
  position: absolute;
  top: 60px;
  right: 10px;
  height: 41px;
  aspect-ratio: 1 / 1;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

#createPlanContainer .submitSVG {
  fill: white;
  width: 25px;
  aspect-ratio: 1 / 1;
}

#dateTimeMsg {
  position: fixed;
  right: 20px;
  font-size: 24px;
  text-align: right;
  border-radius: var(--border-radius-large);
  cursor: pointer;
  transition: 150ms ease-in-out;
  padding: 7px 7px 0px 7px;
}

#dateTimeMsg:hover {
  background-color: rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(5px);
}

#dateTimeMsg-time {
  transform: translateY(-7px);
}

#logoutAllPopUp {
  position: fixed;
  background-color: var(--main-background-color);
  width: 100%;
  height: 100%;
  top: 0;
  z-index: 1;
}

#logoutAllPopUp .itemContainer {
  translate: 0 125px;
}

